# qontos-benchmarks

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: evidence.md  index.md  methodology.md  metrics.md
methodology/: README.md
reports/samples/: baseline_v0.1.0.json  baseline_v0.1.0.md
reports/schema/: benchmark_report.schema.json
src/qontos_bench/: __init__.py  circuits.py  cli.py  report.py  runner.py
tests/: conftest.py  test_benchmark_runner.py  test_circuits.py  test_imports.py  test_report_schema.py
