[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qontos-bench"
version = "0.1.0"
description = "Quantum benchmark framework for the QONTOS platform"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Ramesh Tamilselvan", email = "rameshtamilselvan@gmail.com"}]
keywords = ["quantum", "benchmarks", "fidelity", "qiskit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "qontos @ git+https://github.com/qontos/qontos.git@v0.2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "mypy>=1.8", "ruff>=0.4", "build>=1.0"]

[project.urls]
Homepage = "https://github.com/qontos/qontos-benchmarks"
Repository = "https://github.com/qontos/qontos-benchmarks"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
